[gd_scene load_steps=12 format=2]

[ext_resource path="res://Font/HighlandGothicFONT.tres" type="DynamicFont" id=1]
[ext_resource path="res://Presets/Smartphone/SmartphoneDisplay.gd" type="Script" id=2]
[ext_resource path="res://Sounds/numbers/1.ogg" type="AudioStream" id=3]
[ext_resource path="res://Font/Arial.tres" type="DynamicFont" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.701961, 0.258824, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.968627, 0.968627, 0.968627, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0.541176, 0.647059, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.498039 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.721569 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0156863, 0.0156863, 0.0156863, 0.956863 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 0.266667 )

[node name="SmartphoneDisplay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.513336
margin_bottom = -0.513306
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Device" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.504
anchor_right = 0.5
anchor_bottom = 0.504
margin_left = -205.0
margin_top = -349.88
margin_right = 195.0
margin_bottom = 350.12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NotificationScreen" type="Panel" parent="Device"]
margin_left = 15.0
margin_top = 15.0
margin_right = 385.0
margin_bottom = 685.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HeadlinePin" type="Label" parent="Device/NotificationScreen"]
margin_left = 55.0
margin_top = 72.0
margin_right = 315.0
margin_bottom = 136.0
custom_fonts/font = ExtResource( 1 )
text = "12:34"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceRect" type="ReferenceRect" parent="Device/NotificationScreen"]
margin_left = 80.0
margin_top = 245.0
margin_right = 290.0
margin_bottom = 455.0
border_color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_1" type="Button" parent="Device/NotificationScreen/ReferenceRect"]
anchor_left = -0.385
anchor_right = -0.385
margin_left = 55.85
margin_right = 315.85
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Device/NotificationScreen/ReferenceRect/Button_1"]
margin_left = 8.75635
margin_top = 1.0
margin_right = 410.756
margin_bottom = 95.0
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/font = ExtResource( 1 )
text = "Eine neue Nachricht"
align = 1
valign = 1

[node name="LockScreen" type="Panel" parent="Device"]
visible = false
margin_left = 15.0
margin_top = 15.0
margin_right = 385.0
margin_bottom = 685.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PinInputPanel" type="Panel" parent="Device/LockScreen"]
margin_left = 55.0
margin_top = 150.0
margin_right = 315.0
margin_bottom = 224.0
custom_styles/panel = SubResource( 2 )

[node name="PinInputLabel" type="Label" parent="Device/LockScreen/PinInputPanel"]
margin_left = 11.0
margin_top = 4.0
margin_right = 255.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeadlinePin" type="Label" parent="Device/LockScreen"]
margin_left = 55.0
margin_top = 72.0
margin_right = 315.0
margin_bottom = 136.0
custom_fonts/font = ExtResource( 1 )
text = "PIN"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceRect" type="ReferenceRect" parent="Device/LockScreen"]
margin_left = 80.0
margin_top = 245.0
margin_right = 290.0
margin_bottom = 455.0
border_color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Ok" type="Button" parent="Device/LockScreen/ReferenceRect"]
margin_left = 150.0
margin_top = 220.0
margin_right = 210.0
margin_bottom = 280.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Device/LockScreen/ReferenceRect/Button_Ok"]
margin_left = 2.25171
margin_top = 3.00275
margin_right = 64.2517
margin_bottom = 61.0028
rect_scale = Vector2( 0.9, 0.9 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.698039, 1, 0.509804, 1 )
text = "OK"
align = 1
valign = 1

[node name="Button_Del" type="Button" parent="Device/LockScreen/ReferenceRect"]
margin_top = 220.0
margin_right = 60.0
margin_bottom = 280.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Device/LockScreen/ReferenceRect/Button_Del"]
margin_left = 1.0
margin_top = 1.0
margin_right = 60.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 0.458824, 0.458824, 1 )
text = "C"
align = 1
valign = 1

[node name="Button_1" type="Button" parent="Device/LockScreen/ReferenceRect"]
margin_right = 60.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Device/LockScreen/ReferenceRect/Button_1"]
margin_left = 1.0
margin_top = 1.0
margin_right = 60.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 1 )
text = "1"
align = 1
valign = 1

[node name="Button_2" type="Button" parent="Device/LockScreen/ReferenceRect"]
margin_left = 75.0
margin_right = 135.0
margin_bottom = 60.0

[node name="Label" type="Label" parent="Device/LockScreen/ReferenceRect/Button_2"]
margin_left = 1.0
margin_top = 1.0
margin_right = 60.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 1 )
text = "2"
align = 1
valign = 1

[node name="Button_3" type="Button" parent="Device/LockScreen/ReferenceRect"]
margin_left = 150.0
margin_right = 210.0
margin_bottom = 60.0

[node name="Label" type="Label" parent="Device/LockScreen/ReferenceRect/Button_3"]
margin_left = 1.0
margin_top = 1.0
margin_right = 60.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 1 )
text = "3"
align = 1
valign = 1

[node name="Button_4" type="Button" parent="Device/LockScreen/ReferenceRect"]
margin_left = 1.207
margin_top = 75.0
margin_right = 61.207
margin_bottom = 135.0

[node name="Label" type="Label" parent="Device/LockScreen/ReferenceRect/Button_4"]
margin_left = 1.0
margin_top = 1.0
margin_right = 60.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 1 )
text = "4"
align = 1
valign = 1

[node name="Button_5" type="Button" parent="Device/LockScreen/ReferenceRect"]
margin_left = 75.0
margin_top = 75.0
margin_right = 135.0
margin_bottom = 135.0

[node name="Label" type="Label" parent="Device/LockScreen/ReferenceRect/Button_5"]
margin_left = 1.0
margin_top = 1.0
margin_right = 60.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 1 )
text = "5"
align = 1
valign = 1

[node name="Button_6" type="Button" parent="Device/LockScreen/ReferenceRect"]
margin_left = 150.0
margin_top = 75.0
margin_right = 210.0
margin_bottom = 135.0

[node name="Label" type="Label" parent="Device/LockScreen/ReferenceRect/Button_6"]
margin_left = 1.0
margin_top = 1.0
margin_right = 60.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 1 )
text = "6"
align = 1
valign = 1

[node name="Button_7" type="Button" parent="Device/LockScreen/ReferenceRect"]
margin_top = 150.0
margin_right = 60.0
margin_bottom = 210.0

[node name="Label" type="Label" parent="Device/LockScreen/ReferenceRect/Button_7"]
margin_left = 1.0
margin_top = 1.0
margin_right = 60.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 1 )
text = "7"
align = 1
valign = 1

[node name="Button_8" type="Button" parent="Device/LockScreen/ReferenceRect"]
margin_left = 75.0
margin_top = 150.0
margin_right = 135.0
margin_bottom = 210.0

[node name="Label" type="Label" parent="Device/LockScreen/ReferenceRect/Button_8"]
margin_left = 1.0
margin_top = 1.0
margin_right = 60.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 1 )
text = "8"
align = 1
valign = 1

[node name="Button_9" type="Button" parent="Device/LockScreen/ReferenceRect"]
margin_left = 150.0
margin_top = 150.0
margin_right = 210.0
margin_bottom = 210.0

[node name="Label" type="Label" parent="Device/LockScreen/ReferenceRect/Button_9"]
margin_left = 1.0
margin_top = 1.0
margin_right = 60.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 1 )
text = "9"
align = 1
valign = 1

[node name="Button_0" type="Button" parent="Device/LockScreen/ReferenceRect"]
margin_left = 75.0
margin_top = 220.0
margin_right = 135.0
margin_bottom = 280.0

[node name="Label" type="Label" parent="Device/LockScreen/ReferenceRect/Button_0"]
margin_left = 1.0
margin_top = 1.0
margin_right = 60.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 1
valign = 1

[node name="wrongPin" type="Label" parent="Device/LockScreen"]
visible = false
margin_left = 116.033
margin_top = 532.261
margin_right = 348.033
margin_bottom = 584.261
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.835294, 0, 0, 1 )
text = "falsche PIN"

[node name="HomeScreen" type="Panel" parent="Device"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -14.9999
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeadlinePin" type="Label" parent="Device/HomeScreen"]
margin_left = 55.0
margin_top = 72.0
margin_right = 315.0
margin_bottom = 136.0
custom_fonts/font = ExtResource( 1 )
text = "HOME"
align = 1
valign = 1

[node name="ReferenceRect" type="ReferenceRect" parent="Device/HomeScreen"]
margin_left = 80.0
margin_top = 245.0
margin_right = 290.0
margin_bottom = 455.0
border_color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Device/HomeScreen/ReferenceRect"]
anchor_left = -0.338095
anchor_top = 0.0142857
anchor_right = 1.34286
anchor_bottom = 0.552381
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="Device/HomeScreen/ReferenceRect/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
text = "Neue Nachricht:

Hey,
um wie viel Uhr beginnt morgen die Prüfung?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoLine" type="Panel" parent="Device"]
margin_left = 15.0
margin_top = 15.0
margin_right = 385.0
margin_bottom = 38.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Device/InfoLine"]
margin_left = 156.888
margin_top = 1.39668
margin_right = 216.888
margin_bottom = 24.3967
text = "12:34"
align = 1
valign = 1

[node name="Label2" type="Label" parent="Device/InfoLine"]
margin_left = 315.099
margin_top = 1.06833
margin_right = 375.099
margin_bottom = 24.0683
text = "36%"
align = 1
valign = 1

[node name="CloseButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 202.0
margin_top = -347.0
margin_right = 261.0
margin_bottom = -289.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 1 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -20.219
[connection signal="pressed" from="Device/NotificationScreen/ReferenceRect/Button_1" to="." method="_on_new_message_pressed"]
[connection signal="pressed" from="Device/LockScreen/ReferenceRect/Button_Ok" to="." method="_on_Button_Ok_pressed"]
[connection signal="pressed" from="Device/LockScreen/ReferenceRect/Button_Del" to="." method="_on_Button_Del_pressed"]
[connection signal="pressed" from="Device/LockScreen/ReferenceRect/Button_1" to="." method="_on_Button_pressed" binds= [ "1" ]]
[connection signal="pressed" from="Device/LockScreen/ReferenceRect/Button_2" to="." method="_on_Button_pressed" binds= [ "2" ]]
[connection signal="pressed" from="Device/LockScreen/ReferenceRect/Button_3" to="." method="_on_Button_pressed" binds= [ "3" ]]
[connection signal="pressed" from="Device/LockScreen/ReferenceRect/Button_4" to="." method="_on_Button_pressed" binds= [ "4" ]]
[connection signal="pressed" from="Device/LockScreen/ReferenceRect/Button_5" to="." method="_on_Button_pressed" binds= [ "5" ]]
[connection signal="pressed" from="Device/LockScreen/ReferenceRect/Button_6" to="." method="_on_Button_pressed" binds= [ "6" ]]
[connection signal="pressed" from="Device/LockScreen/ReferenceRect/Button_7" to="." method="_on_Button_pressed" binds= [ "7" ]]
[connection signal="pressed" from="Device/LockScreen/ReferenceRect/Button_8" to="." method="_on_Button_pressed" binds= [ "8" ]]
[connection signal="pressed" from="Device/LockScreen/ReferenceRect/Button_9" to="." method="_on_Button_pressed" binds= [ "9" ]]
[connection signal="pressed" from="Device/LockScreen/ReferenceRect/Button_0" to="." method="_on_Button_pressed" binds= [ "0" ]]
[connection signal="pressed" from="CloseButton" to="." method="_on_CloseButton_pressed"]
